 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 5
============

* [cdunde]: Cleaned up, fixed if needed and brought into sync with all QuArK addons.

* [cdunde]: Did a lot of standardize file work and cleanup of texture and entity coding.

* [cdunde]: Added full game support for PREY. Including easy selectors for models, sound,
          - color settings and much more along with close to 8MB of entities.

* [cdunde]: Created and added new build tools in the cvs games folder to add Entity Specifics
          - for better and easer QuArK game support .qrk file creation.

* [cdunde]: Fixed FAKK2 and EF 2 worldspawn game music to play and added music list for each.

* [cdunde]: Added FAKK2 shader, weapon and model entity support.

* [cdunde]: Added EF2 shader, weapon and model entity support.

* [DanielPharos]: DanielPharos fix to stop bezier-view from causing errors.

* [DanielPharos/cdunde]: Added various new functions for QuArK development, see QuarkX doc section.

* [cdunde/DanielPharos]: Started game support for Heavy Metal - FAKK2.

* [cdunde/DanielPharos]: Added game support for Team Fortress 2. Entities by Japa, textures by Nax.

* [cdunde/DanielPharos]: Setup new Paint modes toolbar and complete painting functions to allow
          - the painting of skin textures in any Model Editor textured and Skin-view.

* [DanielPharos]: Big changes to OpenGL: should fix the OpenGL hangups.

* [DanielPharos]: The skinview now properly updates to reflect changes made to textures.

* [cdunde]: Made toolbars interactive with one another to
          - turn off buttons when needed, avoiding errors and crashes.

* [cdunde]: To stop doautozoom in Skin-view, causing unexpected view jumps.
