@@ -15,6 +15,9 @@ $Id$
 6.5.0 Beta 5
 ============
 
+* [DanielPharos]: Build old PCX file loading code back in. DevIL and FreeImage were causing
+          - random trouble.
+
 * [cdunde]: Cleaned up, fixed if needed and brought into sync with all QuArK addons.
 
 * [cdunde]: Did a lot of standardize file work and cleanup of texture and entity coding.
